--- a/src/Header/UserBar/UserBar.scss
+++ b/src/Header/UserBar/UserBar.scss
@@ -26,4 +26,9 @@
       transform-origin: center center;
     }
   }
+
+  &:hover {
+    opacity: 1;
+    background-color: rgba(0, 0, 0, 0.04);
+  }
 }
