--- a/103/src/Header/UserBar/UserBar.scss
+++ b/103/src/Header/UserBar/UserBar.scss
@@ -1,8 +1,11 @@
 .user-bar {
   border-left: 1px solid hsla(0, 0%, 100%, 0.16);
   display: flex;
-  align-items: stretch;
+  align-items: center;
   height: 100%;
+  padding: 8px 12px;
+  max-width: 240px;
+  cursor: pointer;
 
   &__link {
     display: flex;
@@ -18,10 +21,12 @@
   }
 
   &__icon {
+    display: flex;
     margin-right: 4px;
 
     & svg {
       width: 24px;
+      fill: #fff;
       touch-action: manipulation;
       transform-origin: center center;
     }
