--- a/103/src/App.css
+++ b/103/src/App.css
@@ -7,6 +7,13 @@
   pointer-events: none;
 }
 
+.user-console {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  height: auto;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
