--- a/103/src/Header/pages/AuthorizationPage.scss
+++ b/103/src/Header/pages/AuthorizationPage.scss
@@ -6,4 +6,13 @@
   background: url(../public/bgg.jpg) no-repeat center center fixed;
   background-size: cover;
   min-height: 100vh;
+
+  @media only screen and (max-width: 767px) and (min-width: 0) {
+    padding: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background: none;
+  }
 }
