feat: delete subcategories from navigation

--- a/103/src/components/Navigation/CategoriesItem/index.scss
+++ b/103/src/components/Navigation/CategoriesItem/index.scss
@@ -1,4 +1,4 @@
-.navigation__item {
+.category {
   position: relative;
   margin: 0;
   padding: 0;
@@ -12,12 +12,13 @@
   border-right: 1px solid rgba(0, 0, 0, 0.08);
   border-bottom: 1px solid rgba(0, 0, 0, 0.08);
   background-color: #fff;
+  text-decoration: none;
   transition-duration: 0.2s;
   transition-timing-function: ease-in-out;
   transition-property: background-color;
 }
 
-.navigation__item.isActive:after {
+.category.isActive:after {
   position: absolute;
   bottom: -1px;
   left: 0;
@@ -27,24 +28,25 @@
   content: "";
 }
 
-.navigation__item:nth-child(1) {
+.category:nth-child(1) {
   border-left: 1px solid rgba(0, 0, 0, 0.08);
 }
 
-.navigation__item:hover {
+.category:hover {
   background-color: rgba(0, 0, 0, 0.04);
   cursor: pointer;
 }
 
-.navigation__item-icon {
+.category-icon {
   margin: 0 auto 12px;
   width: 32px;
   height: 32px;
 }
 
-.navigation__item-name {
+.category-name {
   display: block;
   font-family: Verdana, sans-serif;
   font-size: 14px;
   line-height: 20px;
+  color: #000;
 }
