--- a/103/src/components/Navigation/CategoriesItem/index.scss
+++ b/103/src/components/Navigation/CategoriesItem/index.scss
@@ -18,7 +18,7 @@
   transition-property: background-color;
 }
 
-.category.isActive:after {
+.category.active:after {
   position: absolute;
   bottom: -1px;
   left: 0;
