--- a/103/src/components/clinics/clinicItem/clinicItem.css
+++ b/103/src/components/clinics/clinicItem/clinicItem.css
@@ -11,6 +11,7 @@
 }
 
 .clinic-wrapper {
+  position: relative;
   margin: 0 16px;
   padding: 16px;
   border-radius: 8px;
@@ -18,6 +19,10 @@
   box-shadow: 0 2px 8px rgb(0 0 0 / 4%);
   font-size: 13px;
   line-height: 20px;
+}
+
+.clinic-wrapper--oncheck {
+  background-color: #fff9f2e7;
 }
 
 .clinic-wrapper:not(:first-child) {
