--- a/103/src/components/Filter/index.scss
+++ b/103/src/components/Filter/index.scss
@@ -1,42 +1,13 @@
 .categorySubMenu {
     position: relative;
-    display: none;
+    display: block;
     padding: 28px 0;
-    overflow-y: scroll;
-    &.active {
-        display: block;
-    }
-}
-
-.categoriesSubMenu-button-close {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    width: 44px;
-    height: 44px;
-    border: none;
-    border-radius: 50%;
-    background-color: rgba(0,0,0,.8);
-    outline: none;
-    transition: background-color .2s ease-out;
-    &::after {
-        position: absolute;
-        content: '+';
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%) rotate(45deg);
-        font-size: 30px;
-        color: #fff;
-    }
-    &:hover {
-        background-color: rgb(0,0,0);
-        cursor: pointer;
-    }
 }
 
 .categorySubMenu-row {
     margin: 0 auto;
     display: flex;
+    flex-wrap: wrap;
     max-width: 1208px;
 }
 
