--- a/103/src/components/Navigation/index.scss
+++ b/103/src/components/Navigation/index.scss
@@ -4,3 +4,10 @@
   display: flex;
   flex-wrap: nowrap;
 }
+
+@media (max-width: 479px) {
+  .categories-menu {
+    flex-wrap: wrap;
+    flex-direction: column;
+  }
+}
