--- a/103/src/components/clinics/clinic.css
+++ b/103/src/components/clinics/clinic.css
@@ -11,14 +11,21 @@
 }
 
 .clinic-container {
-  width: 45%;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
   min-width: 688px;
   background-color: #f5f5f5;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, 
+  Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 15px;
 }
 
 .place-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-top: 16px;
+  height: 100vh;
+  overflow: scroll;
 }
