--- a/103/src/components/doctors/doctors.css
+++ b/103/src/components/doctors/doctors.css
@@ -11,14 +11,18 @@
 }
 
 .doctor-container {
-  width: 45%;
   min-width: 688px;
+  height: 100vh;
   background-color: #f5f5f5;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 15px;
+  overflow: scroll;
 }
 
 .doctors-list {
-  margin-top: 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
