--- a/103/src/components/Filter/index.scss
+++ b/103/src/components/Filter/index.scss
@@ -5,6 +5,7 @@
 }
 
 .categorySubMenu-row {
+    box-sizing: border-box;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
@@ -13,7 +14,7 @@
 
 @media (max-width: 1208px) {
     .categorySubMenu-row {
-        margin: 0 15px;
+        padding: 0 15px;
         display: flex;
         justify-content: space-between;
     }
@@ -21,7 +22,7 @@
 
 @media (max-width: 767px) {
     .categorySubMenu-row {
-        margin: 0 10px;
+        padding: 0 10px;
         display: flex;
         justify-content: center;
     }
