--- a/103/src/components/clinics/clinic.css
+++ b/103/src/components/clinics/clinic.css
@@ -21,6 +21,12 @@
   font-size: 15px;
 }
 
+@media (max-width: 700px) {
+  .clinic-container {
+    min-width: 320px;
+  }
+}
+
 .place-list {
   display: flex;
   justify-content: center;
