--- a/103/src/components/clinics/clinicItem/clinicItem.css
+++ b/103/src/components/clinics/clinicItem/clinicItem.css
@@ -29,7 +29,8 @@
   color: rgb(0 0 0 / 25%);
 }
 
-.clinic-wrapper--oncheck .description-div, .clinic-wrapper--oncheck .other-info-div {
+.clinic-wrapper--oncheck .description-div,
+.clinic-wrapper--oncheck .other-info-div {
   color: #a7a6a5;
 }
 
@@ -151,9 +152,108 @@
   border-radius: 16px;
   padding: 0 12px;
   background-color: rgba(0, 0, 0, 0.06);
-  transition: all 0.2s ease-in-out;
 }
 
 .click-buttons {
   display: flex;
+}
+
+@media (max-width: 1024px) {
+  .clinic-wrapper {
+    margin: 0 8px;
+    padding: 8px;
+    font-size: 12px;
+    line-height: 18px;
+  }
+
+  .clinic-wrapper:not(:first-child) {
+    margin-top: 8px;
+  }
+
+  .clinic-what-is-it {
+    letter-spacing: 0.04em;
+    font-size: 12px;
+    margin-bottom: 6px;
+    line-height: 16px;
+  }
+
+  .clinic-info-wrapper {
+    margin-bottom: 8px;
+  }
+
+  .clinic-name {
+    padding-right: 6px;
+    font-size: 18px;
+    line-height: 21px;
+  }
+
+  .description-div {
+    margin-bottom: 8px;
+    font-size: 13px;
+    text-indent: 20px;
+    max-height: 110px;
+  }
+
+  .staff-div {
+    margin-bottom: 8px;
+  }
+
+  .staff-items {
+    height: 30px;
+    padding: 0;
+    border-radius: 15px;
+  }
+
+  .staff-button {
+    margin-top: 1px;
+    line-height: 28px;
+    border-radius: 15px;
+    padding: 0 10px;
+  }
+}
+
+@media (max-width: 570px) {
+  .clinic-wrapper {
+    line-height: 15px;
+    border-radius: 6px;
+    box-shadow: 0 2px 6px rgb(0 0 0 / 4%);
+  }
+
+  .clinic-what-is-it {
+    font-size: 10px;
+    margin-bottom: 4px;
+    line-height: 14px;
+  }
+
+  .clinic-name {
+    font-size: 12px;
+    line-height: 16px;
+  }
+
+  .description-div {
+    max-height: 180px;
+  }
+}
+
+@media (max-width: 425px) {
+  .clinic-wrapper {
+    font-size: 11px;
+    border-radius: 4px;
+  }
+
+  .description-div {
+    font-size: 12px;
+  }
+
+  .staff-items {
+    height: 24px;
+    border-radius: 12px;
+  }
+
+  .staff-button {
+    margin: 0;
+    padding: 0 6px;
+    line-height: 24px;
+    border-radius: 12px;
+  }
 }
