--- a/103/src/components/clinics/clinicLogo/clinicLogo.css
+++ b/103/src/components/clinics/clinicLogo/clinicLogo.css
@@ -17,3 +17,27 @@
   max-width: 70px;
   height: auto;
 }
+
+@media (max-width: 1024px) {
+  .clinic-logo {
+    height: 40px;
+  }
+  
+  .clinic-logo img {
+    width: auto;
+    max-width: 60px;
+    max-height: 40px;
+  }
+}
+
+@media (max-width: 550px) {
+  .clinic-logo {
+    height: 30px;
+  }
+  
+  .clinic-logo img {
+    width: auto;
+    max-width: 45px;
+    max-height: 30px;
+  }
+}
