--- a/103/src/components/clinics/onChangeItem/onChange.css
+++ b/103/src/components/clinics/onChangeItem/onChange.css
@@ -14,3 +14,15 @@
   width: 16px;
   height: 16px;
 }
+
+@media (max-width: 1024px) {
+  .on-check {
+    right: 8px;
+    top: 8px;
+  }
+
+  .on-check img {
+    width: 12px;
+    height: 12px;
+  }
+}
