--- a/103/src/components/doctors/doctorCard/doctorCard.css
+++ b/103/src/components/doctors/doctorCard/doctorCard.css
@@ -88,7 +88,7 @@ h3.this-name {
   color: rgba(0, 0, 0, 0.65);
 }
 
-.click-buttons {
+.click-buttons-doc {
   display: flex;
   padding-top: 8px;
 }
