--- a/103/src/components/doctors/phoneBtn/phoneBtn.css
+++ b/103/src/components/doctors/phoneBtn/phoneBtn.css
@@ -32,3 +32,33 @@
   transform: scale(-1, 1);
   filter: invert();
 }
+
+
+@media (max-width: 1024px) {
+  .phone-button {
+    height: 28px;
+    width: 28px;
+    margin-right: 4px;
+    padding: 10px 12px;
+  }
+  
+  .phone-button img {
+    width: 14px;
+    left: 7px;
+    top: 7px;
+  }
+}
+
+@media (max-width: 425px) {
+  .phone-button {
+    height: 24px;
+    width: 24px;
+    padding: 8px 10px;
+  }
+  
+  .phone-button img {
+    width: 12px;
+    left: 6px;
+    top: 6px;
+  }
+}
