feat: add adaptive doctors

--- a/103/src/components/doctors/startBtn/starBtn.css
+++ b/103/src/components/doctors/startBtn/starBtn.css
@@ -17,6 +17,7 @@
   color: #fff;
   background-color: rgba(0, 0, 0, 0.04);
   transition: all 0.2s ease-in-out;
+  cursor: pointer;
 }
 
 .star-button:hover {
