--- a/103/src/components/doctors/doctorImage/doctorImage.css
+++ b/103/src/components/doctors/doctorImage/doctorImage.css
@@ -18,3 +18,18 @@
   background-color: rgba(0, 0, 0, 0.08);
   border-radius: 50%;
 }
+
+@media (max-width: 700px) {
+  .doctor-img {
+    width: calc(44% - 50px);
+    height: calc(44% - 50px);
+  }
+}
+
+@media (max-width: 570px) {
+  .doctor-img {
+    width: calc(36% - 15px);
+    height: calc(36% - 15px);
+    margin-right: 15px;
+  }
+}
