--- a/103/src/components/doctors/doctors.css
+++ b/103/src/components/doctors/doctors.css
@@ -12,12 +12,10 @@
 
 .doctor-container {
   min-width: 688px;
-  height: 100vh;
   background-color: #f5f5f5;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 15px;
-  overflow: scroll;
 }
 
 .doctors-list {
@@ -25,4 +23,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+@media (max-width: 700px) {
+  .doctor-container {
+    min-width: auto;
+  }
 }
