--- a/103/src/components/mainServices/services.scss
+++ b/103/src/components/mainServices/services.scss
@@ -3,19 +3,15 @@
 }
 
 .services-wrapper {
-  margin-bottom: 70px;
+  margin: 0 auto 70px;
+  padding: 0 15px;
   display: flex;
   justify-content: center;
+  max-width: 1246px;
 }
 
 .services-container {
   max-width: 1280px;
-}
-
-@media (max-width: 1439px) {
-  .services-wrapper {
-    padding: 0 15px;
-  }
 }
 
 @media (max-width: 1279px) {
